--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.37",
+    "tailwindcss": "^3.4.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.2",
     "vite": "^5.1.6",
